<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="etGithubId" type="id" />
    <item name="btnIdYes" type="id" />
    <item name="btnIdNo" type="id" />
    <item name="etDesc" type="id" />
</resources>

